execution des methodes